<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/selectshapes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectshapes_button" />

        <Button
            android:id="@+id/eraser_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eraser" />

        <Button
            android:id="@+id/clearshapes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearshapes_button" />

        <Button
            android:id="@+id/redPen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redPen"
            android:textColor="#ff0000" />

        <Button
            android:id="@+id/yellowPen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellowPen"
            android:textColor="#ffff00" />

        <Button
            android:id="@+id/bluePen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluePen"
            android:textColor="#0000ff" />

        <Button
            android:id="@+id/thickPen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thickPen" />

        <Button
            android:id="@+id/boldPen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boldPen" />

        <Button
            android:id="@+id/stylePen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stylePen" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
        
        <Button
            android:id="@+id/capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture" />

        <Button
            android:id="@+id/localpic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localpic" />
        
        <Button
            android:id="@+id/shapeType_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shapeType" />
    </LinearLayout>
    
    <FrameLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <touchvg.view.PaintView
            android:id="@+id/paintView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

</LinearLayout>